Adicionando Midia Query

--- a/style.css
+++ b/style.css
@@ -250,3 +250,68 @@ footer .linha2 a:first-child{
 footer .linha2 a:hover{
     color: var(--cinza-hover);
 }
+
+
+@media only screen and (max-width: 600px){
+    #principal{
+        flex-direction: column;
+        height: auto;
+    }
+
+    #menu{
+        flex-direction: column;
+        width: 100%;
+        padding: 0px;
+        margin: 0px;
+    }
+    
+    #menu a{
+        display: flex;
+        align-items: center;
+        height: 50px;
+    }
+
+    #principal button{
+        width: 100%;
+        margin: 0px;
+    }
+
+    section h1{
+        font-size: 40px;
+    }
+
+    section h2{
+        font-size: 25px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    form{
+        width: 95%;
+        font-size: 20px;
+    }
+
+    .checkbox-items label{
+       font-size: 16px;
+    }
+
+    footer .linha1{
+        flex-direction: column;
+    }
+
+    footer .endereço{
+        width: 95%;
+        margin-bottom: 20px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+}
